# game-server

./: CLAUDE.md  CMakeLists.txt  README.md
ClientStub/: CMakeLists.txt
Server/: CMakeLists.txt
Server/src/Core/: IOCPCore.cpp  IOCPCore.h  IOCPObject.h  WorkerThread.cpp  WorkerThread.h
Server/src/Network/: Listener.cpp  Listener.h  RecvBuffer.cpp  RecvBuffer.h  SendBuffer.cpp  SendBuffer.h
Shared/: CMakeLists.txt
Shared/Core/: LockGuard.h  Logger.h  MemoryPool.h  RWLock.h  SpinLock.h  Types.h
Shared/Protocol/: PacketHeader.h  PacketTypes.h  Packets.h
